--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Верните 20-50% потерянных клиентов</title>
+    <title>Revival Engine - система увеличения прибыли | Верните 20-50% потерянных клиентов</title>
 
-    <link rel="shortcut icon" href="public/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
-    <link rel="manifest" href="public/site.webmanifest">
+    <link rel="shortcut icon" href="/public/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
+    <link rel="manifest" href="/public/site.webmanifest">
     <meta name="theme-color" content="#ffffff">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sazonovsmn.github.io/">
     <meta property="og:title" content="Revival Engine - система увеличения прибыли">
     <meta property="og:description" content="Верните 20-50% потерянных клиентов">
-    <meta property="og:image" content="public/ITNEXX_LOGO.png">
+    <meta property="og:image" content="/public/ITNEXX_LOGO.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sazonovsmn.github.io/">
     <meta property="twitter:title" content="Revival Engine - система увеличения прибыли">
     <meta property="twitter:description" content="Верните 20-50% потерянных клиентов">
-    <meta property="twitter:image" content="public/ITNEXX_LOGO.png">
+    <meta property="twitter:image" content="/public/ITNEXX_LOGO.png">
 
     <style>
         body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
